separate DB from ORM, add 07_01 solution, cleanup

--- a/00_zero/07_x01.ipynb
+++ b/00_zero/07_x01.ipynb
@@ -371,6 +371,31 @@
    "source": [
     "archivo_encontrado"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# otra opcion\n",
+    "\n",
+    "\n",
+    "def genera_txt(num_grupo):\n",
+    "    grupo_num_grupo = []\n",
+    "\n",
+    "    for elemento in ss.split(\"\\n\"):\n",
+    "        if elemento.endswith(f\"{num_grupo}>\"):\n",
+    "            grupo_num_grupo.append(elemento)\n",
+    "\n",
+    "    with open(f\"grupo{num_grupo}.txt\", \"w\") as f:\n",
+    "        for p in grupo_num_grupo:\n",
+    "            p = p.split(\"<\")[0]\n",
+    "            f.write(p + \"\\n\")\n",
+    "\n",
+    "\n",
+    "genera_txt(1)"
+   ]
   }
  ],
  "metadata": {
