--- a/01_comprehensions_pep8/comprehensions.ipynb
+++ b/01_comprehensions_pep8/comprehensions.ipynb
@@ -824,20 +824,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CODE\n",
+    "import requests\n",
     "\n",
     "respuesta = requests.get(\"https://raw.githubusercontent.com/Alir3z4/stop-words/master/spanish.txt\")\n",
     "\n",
     "respuesta.raise_for_status()\n",
     "\n",
-    "texto = respuesta......\n",
+    "stop_words = respuesta.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### CODE\n",
     "\n",
-    "palabras_para_eliminar = texto.split(...)\n",
-    "\n",
+    "palabras_para_eliminar = stop_words.split(...)\n",
     "\n",
     "palabras_texto = texto_raw.........\n",
-    "    \n",
-    "    \n",
     "    \n",
     "palabras_filtradas = [... for ... in ... if ... not in ...]"
    ]
