--- a/01_comprehensions_pep8/x01_comprehensions.ipynb
+++ b/01_comprehensions_pep8/x01_comprehensions.ipynb
@@ -264,6 +264,44 @@
     "\n",
     "    return"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# la misma funcion un poco mas explicada y que acepta más parámetros\n",
+    "\n",
+    "\n",
+    "def limpiar_archivo(ruta_archivo, stop_words, extra_nombre):\n",
+    "\n",
+    "    # leer contenidos del archivo\n",
+    "    with open(ruta_archivo, \"r\") as f:\n",
+    "        contenidos = f.read()\n",
+    "\n",
+    "    # convertir contenidos en lista de palabras (tokenizar)\n",
+    "    lista_contenidos = contenidos.split()\n",
+    "\n",
+    "    # filtrar palabras que sean stop-words\n",
+    "    palabras_filtradas = [\n",
+    "        palabra for palabra in lista_contenidos if palabra not in stop_words\n",
+    "    ]\n",
+    "\n",
+    "    # generar nuevo nombre\n",
+    "    nombre = ruta_archivo.split(\".\")[0]\n",
+    "    extension = ruta_archivo.split(\".\")[1]\n",
+    "    # nombre, extension = ruta_archivo.split(\".\")\n",
+    "\n",
+    "    nombre_nuevo = f\"{nombre}_{extra_nombre}.{extension}\"\n",
+    "\n",
+    "    # escribir palabras en un archivo nuevo\n",
+    "    with open(nombre_nuevo, \"w\") as f:\n",
+    "        for palabra in palabras_filtradas:\n",
+    "            f.write(f\"{palabra}\\n\")\n",
+    "\n",
+    "    return nombre_nuevo"
+   ]
   }
  ],
  "metadata": {
