--- a/03_requests/00_requests.ipynb
+++ b/03_requests/00_requests.ipynb
@@ -26,8 +26,6 @@
    "source": [
     "import requests\n",
     "import json\n",
-    "import itertools\n",
-    "import os\n",
     "\n",
     "# from mis_funciones import guardar_json"
    ]
@@ -48,20 +46,20 @@
    "outputs": [],
    "source": [
     "def guardar_json(datos, nombre_archivo):\n",
-    "    \n",
-    "    error = None\n",
-    "    \n",
+    "\n",
+    "    # error = None\n",
+    "\n",
     "    if os.path.exists(nombre_archivo):\n",
-    "        print(\"el archivo ya existe\")\n",
-    "        error = FileExistsError\n",
-    "        return [archivo for archivo in os.listdir() if not archivo.startswith(\".\") and not archivo.startswith(\"_\")], error\n",
+    "        raise FileExistsError(\"el archivo ya existe\")\n",
+    "\n",
+    "        # return [archivo for archivo in os.listdir() if not archivo.startswith(\".\") and not archivo.startswith(\"_\")], error\n",
     "\n",
     "    string_json = json.dumps(datos)\n",
     "\n",
     "    with open(nombre_archivo, \"w\") as f:\n",
     "        f.write(string_json)\n",
     "\n",
-    "    return nombre_archivo, error"
+    "    return nombre_archivo"
    ]
   },
   {
@@ -78,7 +76,7 @@
     }
    ],
    "source": [
-    "valor_devuelto, error = guardar_json(datos={\"a\": 1, \"b\": 2}, nombre_archivo=\"backup.json\")"
+    "valor_devuelto = guardar_json(datos={\"a\": 1, \"b\": 2}, nombre_archivo=\"backup.json\")"
    ]
   },
   {
@@ -96,8 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if error:\n",
-    "    raise error"
+    "# if error:\n",
+    "#     raise error"
    ]
   },
   {
