--- a/04_databases/02_orm_sqlalchemy.ipynb
+++ b/04_databases/02_orm_sqlalchemy.ipynb
@@ -26,165 +26,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "id": "OwjCqznrjiJs"
-   },
-   "outputs": [],
-   "source": [
-    "import sqlite3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "id": "M4s-uA2wjk4W"
-   },
-   "outputs": [],
-   "source": [
-    "con = sqlite3.connect(\"test.db\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "viAhuiQPjoM1",
-    "outputId": "6d24a1ad-0315-4b1f-e8f6-e5e61c38b09f"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x7f67ed1b98f0>"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "con.execute(\"create table kv (key string, value string)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def insert(valor):\n",
-    "    con.execute(\"insert into kv values ('hola', ?)\", (valor, ))\n",
-    "    con.commit()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Atención:**\n",
-    "\n",
-    "En la función anterior el `tuple` es: `(valor, )`, con una coma después de `valor`. Esto es para decirle a Python que quiero crear un `tuple` de un solo elemento."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "id": "UftYkKpWjyMj"
-   },
-   "outputs": [],
-   "source": [
-    "def insert(valor):\n",
-    "    # otra forma de hacerlo en sqlite (usando un diccionario)\n",
-    "    # el parámetro es :`nombre` en lugar del símbolo `?`\n",
-    "    con.execute(\"insert into kv values ('hola', :valor)\", {\"valor\": valor})\n",
-    "    con.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "id": "ezE6ER9Zk0Eo"
-   },
-   "outputs": [],
-   "source": [
-    "insert(\"jajajaj\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "k-O4uT-DkGeI",
-    "outputId": "339bf159-9acc-42e5-cf25-7efdbc7cdf37"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('hola', 'adios'),\n",
-       " ('hola', 'hello'),\n",
-       " ('hola', 'jajajaj'),\n",
-       " ('hola', 'jajajaj')]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "con.execute(\"select * from kv\").fetchall()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "⬇️⬇️ ¡NO! ⬇️⬇️"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "bb4wXqb8lPeC"
-   },
-   "outputs": [],
-   "source": [
-    "## NO HACER ESTO!!: ##\n",
-    "\n",
-    "def insert(valor)\n",
-    "\n",
-    "    con.execute(f\"INSERT INTO kv VALUES ('hola', {valor})\")\n",
-    "    con.commit()\n",
-    "\n",
-    "## Puede dar lugar a vulnerabilidades y problemas de seguridad en el código."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "⬆️⬆️ ¡NO! ⬆️⬆️"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 84,
    "metadata": {
     "id": "y3Wz9cE0a0Xd"
@@ -974,7 +815,7 @@
     "\n",
     "* Crear una función que obtenga la información de la carta de la base de datos en base a un `id` o como queráis.\n",
     "* En las cartas que no tengan la variable `\"imageUrl\"`, crearla y poner: https://picsum.photos/200/200\n",
-    "* Descargar la imagen de esta carta (o de la cabra 😂) y guardarla en un archivo en el disco.\n",
+    "* Descargar la imagen de esta carta y guardarla en un archivo en el disco.\n",
     "* Crear un archivo JSON que sea una lista de diccionarios con el siguiente formato:\n",
     "\n",
     "```python\n",
