pd move solutions back to nb

--- a/09_pandas/pandas.ipynb
+++ b/09_pandas/pandas.ipynb
@@ -104,7 +104,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "brew[\"texto_aleatorio\"] = [random_string() for _ in range(brew.shape[0])]\n",
+    "\n",
+    "brew[\"texto_aleatorio\"] = brew[\"texto_aleatorio\"].str.upper().str.replace(\"A\", \"_\")\n",
+    "\n",
+    "brew.head(5)"
+   ]
   },
   {
    "cell_type": "code",
@@ -142,14 +148,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "df1 = brew[(brew[\"address\"].str.lower().str.contains(\"plaza\")) &\n",
+    "     (brew[\"website\"].str.lower().str.contains(\"com\")) &\n",
+    "     (brew[\"state_breweries\"] > 100)]\n",
+    "\n",
+    "\n",
+    "df1.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -733,7 +739,9 @@
    "source": [
     "## Ejercicio\n",
     "\n",
-    "Obtener un dtaframe con los restaurantes que abran entre las 18 y las 22:30. Y que tenga un teléfono = \"Reservas\"\n",
+    "Obtener un dtaframe con los restaurantes que abran entre las 18 y las 22:30. Y que tenga un teléfono = `\"reserves\"`\n",
+    "\n",
+    "Añadir una columna llamada `cena` que sea `0` donde NO se cumpla la condición anterior y `1` donde SI se cumpla.\n",
     "\n",
     "**Tip:**\n",
     "\n",
@@ -772,11 +780,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in columnas:\n",
+    "    df[col] = pd.to_datetime(df[col])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df[\n",
+    "    (df[\"horari_hores_inici\"].dt.hour >= 18)\n",
+    "    & ((df[\"horari_hores_fi\"].dt.hour <= 22) & (df[\"horari_hores_fi\"].dt.minute <= 30))\n",
+    "    & (df[\"telefon_tipus\"] == \"reserves\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3 formas de hacer lo mismo"
+    "Creamos la columna con todo = `0`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"cena\"] = 0\n",
+    "\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modificamos donde se cumple la condición. **IMPORTANTE**: usamos `.loc[]` para hacer modificaciones.\n",
+    "\n",
+    "**MAL**\n",
+    "\n",
+    "```python\n",
+    "df[\n",
+    "    (df[\"horari_hores_inici\"].dt.hour >= 18)\n",
+    "    & ((df[\"horari_hores_fi\"].dt.hour <= 22) & (df[\"horari_hores_fi\"].dt.minute <= 30))\n",
+    "    & (df[\"telefon_tipus\"] == \"reserves\"),\n",
+    "][\"cena\"] = 1\n",
+    "```\n",
+    "\n",
+    "**BIEN**\n",
+    "\n",
+    "```python\n",
+    "df.loc[\n",
+    "    (df[\"horari_hores_inici\"].dt.hour >= 18)\n",
+    "    & ((df[\"horari_hores_fi\"].dt.hour <= 22) & (df[\"horari_hores_fi\"].dt.minute <= 30))\n",
+    "    & (df[\"telefon_tipus\"] == \"reserves\"),\n",
+    "    \"cena\",\n",
+    "] = 1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[\n",
+    "    (df[\"horari_hores_inici\"].dt.hour >= 18)\n",
+    "    & ((df[\"horari_hores_fi\"].dt.hour <= 22) & (df[\"horari_hores_fi\"].dt.minute <= 30))\n",
+    "    & (df[\"telefon_tipus\"] == \"reserves\"),\n",
+    "    \"cena\",\n",
+    "] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -841,8 +946,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generar_ulr():\n",
-    "    ..."
+    "def generar_url(x):\n",
+    "\n",
+    "    url = \"https://www.google.es/maps/place/Barcelona/@{lat},{lon},17z\"\n",
+    "\n",
+    "    lat = x[\"latitud\"]\n",
+    "    lon = x[\"longitud\"]\n",
+    "\n",
+    "    url_final = url.format(lat=lat, lon=lon)\n",
+    "\n",
+    "    return url_final"
    ]
   },
   {
@@ -851,8 +964,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"url\"] = df.apply(generar_url, axis=1)[0]\n",
+    "df[\"url\"] = df.apply(generar_url, axis=1)\n",
     "######################             ^^^ importante el axis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comprobamos una URL:"
    ]
   },
   {
@@ -860,7 +980,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.iloc[0][\"url\"]"
+   ]
   },
   {
    "cell_type": "markdown",
